# seg_label_generate

./: .gitignore  CMakeLists.txt  Makefile  labelGen.sh  listGen.sh
include/: label_generator.hpp  seg_label_generator.hpp
include/lane/: spline.hpp  util.hpp
src/: main.cpp  seg_label_generator.cpp
src/lane/: util.cpp
training_data/frames/: frame_000_40s.lines.txt  frame_000_40s.txt  frame_000_57s.txt  frame_003_77s.txt  frame_004_23s.txt
training_data/list/: train.txt  train_gt.txt
